fix issue with track name's text overflow. add title param to album, track, artist name elements

--- a/src/main/resources/static/css/pages/track.css
+++ b/src/main/resources/static/css/pages/track.css
@@ -25,12 +25,6 @@
     left: 740px;
     bottom: 420px;
 }
-.track__name{
-    position: relative;
-    font-size: 50px;
-    bottom: 330px;
-    left: 740px;
-}
 .track__album{
     position: relative;
 
@@ -39,6 +33,19 @@
 
     font-size: 10px;
     width: fit-content;
+}
+.track__name{
+    font-size: 50px;
+
+    position: relative;
+
+    bottom: 330px;
+    left: 740px;
+
+    max-width: 720px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .track__artists{
     position: relative;
